--- a/ebook-folder/site/module-4/capstoneApp-checkpoint-3/index.html
+++ b/ebook-folder/site/module-4/capstoneApp-checkpoint-3/index.html
@@ -2285,7 +2285,7 @@
 <p>To qualify for <strong>presenting your App</strong> to the public at graduation ceremony please see <a href="../../additionalResources/presentationsQualifications/">Presentations Qualifications</a></p>
 <h3 id="example-graduate-project">Example Graduate Project</h3>
 <ul>
-<li><a href="http://austincurrents.com/">Austin Currents by Nathan Simmons</a></li>
+<li><a href="https://docs.google.com/presentation/d/1ylNGCVDAEtgfo_1vatEXcj5HVZcd21Q3VNuLSOyQ70c/edit?usp=sharing">Sept 1, 2023 Graduation</a></li>
 </ul>
 <h2 id="tie-it-all-together">Tie It All Together</h2>
 <h2 id="big-picture">Big Picture</h2>
@@ -2333,7 +2333,7 @@
 <!-- ! Video Content: Clayton@ACA - Tie It All Together: Front-End and Wrap-Up  411.4.5.4 -->
 <iframe src="https://player.vimeo.com/video/496138429?color=2565EF&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-<p><img alt="tieItAllTogether" src="/docs/images/tieItAllTogether.png" /></p>
+<p><img alt="tieItAllTogether" src="/docs/images/tie-it-all-together.png" /></p>
 <p>Congratulations! You now have the big picture of everything we've done. Remember to reference back here as you put the finishing touches on your capstone. </p>
                 
               
