--- a/ebook-folder/site/module-4/deployment/index.html
+++ b/ebook-folder/site/module-4/deployment/index.html
@@ -2281,10 +2281,11 @@
 </code></pre></div></td></tr></table></div>
 </div>
 </div>
-<p>Since the frontend and backend are being served from the same place, Express knows how to handle this. The only situation that could arise is if you named a route the same thing in Express and React Router. For example if you had a page called <code>/users</code> on the frontend. Try to avoid that situation by calling it <code>/listusers</code> or something like that.</p>
+<p>Since the frontend and backend are being served from the same place, Express knows how to handle this. The only situation that could arise is if you named a route the same thing in Express and React Router. For example if you had a page called <code>/users</code> on the frontend. Try to avoid that situation by calling it <code>/listusers</code> or something like that on the Express backend.</p>
 <p>After this you should be good to go! If you have any issues deploying your app talk to the instructor. The hardest part is making sure your app runs locally. If it runs locally, deployment is fairly simple.</p>
+<!-- TODO Replace Video -->
 <!-- ! Video Contents: Vimeo, Clayton@ACA - TITLE - 411.1.1.* -->
-<iframe src="https://player.vimeo.com/video/*" width="655" height="368"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<!-- <iframe src="https://player.vimeo.com/video/*" width="655" height="368"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
 <h2 id="practice-it">Practice It</h2>
 <p>We are going to follow the previous steps to include our React projects into our apps from JS311. There will be a couple small changes.</p>
@@ -2298,8 +2299,8 @@
 </ul>
 <h2 id="additional-resources">Additional Resources</h2>
 <p>We normally provided you with a link to the official documentation of any subject we teach in the pre-homework, but today we'll leave with you with a number of resources that may help you build your Capstone Project or other apps in your future.</p>
+<!-- - [ ] **[Migrate to AWS, a Cheaper Deployment Strategy for Students](https://www.notion.so/Connect-MySQL-workbench-to-AWS-RDS-Free-tier-a95068f5d6b84383ac0af2fd7bfe15f6)** - GCP is usually cheaper to get started with but you may soon lose credits. As an alternative one of our instructors, Matt Huntsberry, has put together a tutorial to help you host with AWS when your GCP credits run out. -->
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <strong><a href="https://www.notion.so/Connect-MySQL-workbench-to-AWS-RDS-Free-tier-a95068f5d6b84383ac0af2fd7bfe15f6">Migrate to AWS, a Cheaper Deployment Strategy for Students</a></strong> - GCP is usually cheaper to get started with but you may soon lose credits. As an alternative one of our instructors, Matt Huntsberry, as put together a tutorial to help you host with AWS when your GCP credits run out.</li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://femmebot.github.io/google-type/">Typography</a> - Seriously, if you have no eye for design but care that your app is beautiful you may want to use this site for some ideas and code.</li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://bradfrost.com/blog/post/atomic-web-design/">Atomic Design</a> - When designing your app I hope you came across this website but if not here it is. A full idea of designing an application, atomically!</li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://codeburst.io/the-front-end-design-checklist-4dd15828fad">Front-End Design Checklist</a> - Maybe you came across this too in your google-ing. Nonetheless, it is a rad resource for any developer of any experience.</li>
