--- a/ebook-folder/site/module-4/mvpShopInfo/index.html
+++ b/ebook-folder/site/module-4/mvpShopInfo/index.html
@@ -2135,8 +2135,8 @@
                 <h1 id="after-graduation">After Graduation</h1>
 <p><strong>How do you get a job without experience, and how do you get experience without a job?</strong></p>
 <h2 id="our-new-initiative">Our New Initiative</h2>
-<p>To help bridge the gap between graduation and full-time employment, Zollege, our parent company, has created an in-house web development agency.  The goal is to give graduates the opportunity to get paid to do professional work while still having time to actively continue their job search. </p>
-<p>In order to make this program available to the most graduates, we are asking for a time commitment of 10 hours a week for 8 - 10 weeks.  In return, you will be paid $15/hr, work on 2 public facing projects that you can add to your portfolio, and include a programmer position at Zollege, LLC to your linkedin.  </p>
+<p>To help bridge the gap between graduation and full-time employment, Ripple Learning, our parent company, has created an in-house web development agency.  The goal is to give graduates the opportunity to get paid to do professional work while still having time to actively continue their job search. </p>
+<p>In order to make this program available to the most graduates, we are asking for a time commitment of 10 hours a week for 8 - 10 weeks.  In return, you will be paid $15/hr, work on 2 public facing projects that you can add to your portfolio, and include a programmer position at Ripple Learning, LLC to your linkedin.  </p>
 <p>There are a limited number of spots available and you may end up on a waiting list for a few weeks, but all grads who want to get into the program will be accepted.</p>
 <p>If you are interested, <a href="https://forms.gle/xeMCMWCN2KrmCJnR8">complete this form</a>. </p>
                 
