replaced hosting videos temporarily

--- a/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
+++ b/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
@@ -2155,132 +2155,92 @@
 <p><em><a href="https://github.com/mmhuntsberry/mini-full-todo-client">Client Repo</a>
 </em><a href="https://github.com/mmhuntsberry/mini-full-todo-server">Server Repo</a></p>
 <h2 id="the-videos">The Videos</h2>
+<p>In this series, Matt Huntsberry, a graduated and former instructor of ACA walks you through a Todo App hosted with front and back end. </p>
 <blockquote>
 <p>NOTE: for now these videos will be hosted in Google Drive. Through the current technical transition we'll get them all over to Vimeo like the rest of our videos. </p>
+<p>NOTE-2: These are class recordings and until we are able to edit them you'll need to fast-forward to the start of the building of the app. Timestamps are on their way.</p>
 </blockquote>
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1X30LLv9c6lEJ9bZhPCHK2eP5n-vvQR9R/view?usp=sharing">1. Intro</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1tpmZwo2AgdXYY_q_N_0o1zsxZuVugXKo/view?usp=drive_link">Mini Full Stack App Pt. 1</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1pq-C5mN9QFUkNOgJM9tZyrO_267uLtEN/view?usp=drive_link">Mini Full Stack App Pt. 2</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1bRVaBTqxc6MywIp_EWGkrxLhJp6-6NG9/view?usp=drive_link">Mini Full Stack App Pt. 3 - Sign Up Route</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/15hqPPeVHhtOvVazQDysQos1U-UbWvrfb/view?usp=drive_link">Mini Full Stack App Pt. 4 - Finish Auth &amp; Hosting</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1Kp0cQ67CvrF2ZHdC-7Qir1yqIxJF2XkU/view?usp=drive_link">Mini Full Stack App Pt. 5 - CRA &amp; Fetching</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1J_1NmnR1k4M3BTec6YgcNC0b6QuNM1hY/view?usp=drive_link">Mini Full Stack App Pt. 6 - Sign Up and Create Todos</a></li>
 </ul>
+<!-- - [ ] [1. Intro](https://drive.google.com/file/d/1X30LLv9c6lEJ9bZhPCHK2eP5n-vvQR9R/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/19OocBGfxYS_hJlrmtoRWblHJ7AcSpb7-/view?usp=sharing">2. The Project</a></li>
-</ul>
+<!-- - [ ] [2. The Project](https://drive.google.com/file/d/19OocBGfxYS_hJlrmtoRWblHJ7AcSpb7-/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1QL5NYKSP7GTQtVyJcqGi-J_ZcL6oATrr/view?usp=sharing">3. Create the Database</a></li>
-</ul>
+<!-- - [ ] [3. Create the Database](https://drive.google.com/file/d/1QL5NYKSP7GTQtVyJcqGi-J_ZcL6oATrr/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1FKxW37kVvltgd29MM8E-uDTD-Rko--Hf/view?usp=sharing">4. Create Express Server</a></li>
-</ul>
+<!-- - [ ] [4. Create Express Server](https://drive.google.com/file/d/1FKxW37kVvltgd29MM8E-uDTD-Rko--Hf/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/18KL-bXZwenqTuQoUPx6p9NL_n6fmgPm1/view?usp=sharing">5. Connect Server to DB with MYSQL.js</a></li>
-</ul>
+<!-- - [ ] [5. Connect Server to DB with MYSQL.js](https://drive.google.com/file/d/18KL-bXZwenqTuQoUPx6p9NL_n6fmgPm1/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1fzcXfa9MVE21u5pkA_55Nck9BchwvZuD/view?usp=sharing">6. Prettier &amp; User CRUD, pt.1</a></li>
-</ul>
+<!-- - [ ] [6. Prettier & User CRUD, pt.1](https://drive.google.com/file/d/1fzcXfa9MVE21u5pkA_55Nck9BchwvZuD/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1ZVqO7arDZxruSUXdfOKYS4Bx9yRv3v33/view?usp=sharing">7. User CRUD, pt.2</a></li>
-</ul>
+<!-- - [ ] [7. User CRUD, pt.2](https://drive.google.com/file/d/1ZVqO7arDZxruSUXdfOKYS4Bx9yRv3v33/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1CYPUAsQHih514EMjexQV74GKz3Af7xUw/view?usp=sharing">8. User Controllers &amp; Routers</a></li>
-</ul>
+<!-- - [ ] [8. User Controllers & Routers](https://drive.google.com/file/d/1CYPUAsQHih514EMjexQV74GKz3Af7xUw/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1z-u263ybbDaN1Luofjxkt0kYXceJZ_v8/view?usp=sharing">9. Todo CRUD</a></li>
-</ul>
+<!-- - [ ] [9. Todo CRUD](https://drive.google.com/file/d/1z-u263ybbDaN1Luofjxkt0kYXceJZ_v8/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1ten2zHrrvHe6s1MFzyYdX_3lqorBrJmP/view?usp=sharing">10. DOTENV</a></li>
-</ul>
+<!-- - [ ] [10. DOTENV](https://drive.google.com/file/d/1ten2zHrrvHe6s1MFzyYdX_3lqorBrJmP/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1S8p81JwktAq8Cv4b4_N1lOFAv1d63k7G/view?usp=sharing">11. Authentication - Sign-up</a></li>
-</ul>
+<!-- - [ ] [11. Authentication - Sign-up](https://drive.google.com/file/d/1S8p81JwktAq8Cv4b4_N1lOFAv1d63k7G/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1vWLQO94kSZcCyAnVcRaJ2JJTEh7FB0mg/view?usp=sharing">12. Authentication - Sign-in</a></li>
-</ul>
+<!-- - [ ] [12. Authentication - Sign-in](https://drive.google.com/file/d/1vWLQO94kSZcCyAnVcRaJ2JJTEh7FB0mg/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1qD7iPaEiAkRxnsZw_zN3_sQXyzAadpkp/view?usp=sharing">13. Deploy to Vercel</a></li>
-</ul>
+<!-- - [ ] [13. Deploy to Vercel](https://drive.google.com/file/d/1qD7iPaEiAkRxnsZw_zN3_sQXyzAadpkp/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1r94aF2g3QoUPy95-Z3TGR5dvCGiXeqGk/view?usp=sharing">14. Initial Client Setup</a></li>
-</ul>
+<!-- - [ ] [14. Initial Client Setup](https://drive.google.com/file/d/1r94aF2g3QoUPy95-Z3TGR5dvCGiXeqGk/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1PxbZMPMJ6Q04LOYl0fsVOSNtre-Kt3zz/view?usp=sharing">15. CORS Fix &amp; Render Todos</a></li>
-</ul>
+<!-- - [ ] [15. CORS Fix & Render Todos](https://drive.google.com/file/d/1PxbZMPMJ6Q04LOYl0fsVOSNtre-Kt3zz/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1AZqMoXotEVbMCfn-bEwWhqMq0Do9gFF6/view?usp=sharing">16. Todo Component</a></li>
-</ul>
+<!-- - [ ] [16. Todo Component](https://drive.google.com/file/d/1AZqMoXotEVbMCfn-bEwWhqMq0Do9gFF6/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1brHfEpB6xrnsEnQH-Q8KoKxdFRFrTRzL/view?usp=sharing">17. Sign-in Component, pt. 1</a></li>
-</ul>
+<!-- - [ ] [17. Sign-in Component, pt. 1](https://drive.google.com/file/d/1brHfEpB6xrnsEnQH-Q8KoKxdFRFrTRzL/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1zTdHWrtLvZ1_IJdcx5ei9Ai_C8c3ZywC/view?usp=sharing">18. Sign-in Component, pt. 2</a></li>
-</ul>
+<!-- - [ ] [18. Sign-in Component, pt. 2](https://drive.google.com/file/d/1zTdHWrtLvZ1_IJdcx5ei9Ai_C8c3ZywC/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1r-JMc7NEj5gNASgn3Zb2MTdNTqDJGV0r/view?usp=sharing">19. Sign-in Component, pt. 3</a></li>
-</ul>
+<!-- - [ ] [19. Sign-in Component, pt. 3](https://drive.google.com/file/d/1r-JMc7NEj5gNASgn3Zb2MTdNTqDJGV0r/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1AgR63tlHMwHUn1kSYfBVB9cTjGTuKw-U/view?usp=sharing">20. Sign-up Component</a></li>
-</ul>
+<!-- - [ ] [20. Sign-up Component](https://drive.google.com/file/d/1AgR63tlHMwHUn1kSYfBVB9cTjGTuKw-U/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1rtxxkEUoeuoag8P_a8OF4acmzdTOfvk8/view?usp=sharing">21. React-Router</a></li>
-</ul>
+<!-- - [ ] [21. React-Router](https://drive.google.com/file/d/1rtxxkEUoeuoag8P_a8OF4acmzdTOfvk8/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1rf5OlXnd8poghcYXNOTE63ATVE7wzLcS/view?usp=sharing">22. Styles</a></li>
-</ul>
+<!-- - [ ] [22. Styles](https://drive.google.com/file/d/1rf5OlXnd8poghcYXNOTE63ATVE7wzLcS/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/10yIcFHCLH8Oe73VWtC9IjU_XQZ3jZqTU/view?usp=sharing">23. Create Todo, pt. 1</a></li>
-</ul>
+<!-- - [ ] [23. Create Todo, pt. 1](https://drive.google.com/file/d/10yIcFHCLH8Oe73VWtC9IjU_XQZ3jZqTU/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1fJQtzYjHXoBJSRJ8yZaCHkdyP6zGbtDl/view?usp=sharing">24. Create Todo, pt. 2</a></li>
-</ul>
+<!-- - [ ] [24. Create Todo, pt. 2](https://drive.google.com/file/d/1fJQtzYjHXoBJSRJ8yZaCHkdyP6zGbtDl/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
 
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1vYxTJvXxem1TOQ6GnUpqEbdaG2ZN-RFg/view?usp=sharing">25. Deploy Front-End</a></li>
-</ul>
+<!-- - [ ] [25. Deploy Front-End](https://drive.google.com/file/d/1vYxTJvXxem1TOQ6GnUpqEbdaG2ZN-RFg/view?usp=sharing) -->
 <!-- <iframe src="" width="655" height="368" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
                 
               
