added video timestamps

--- a/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
+++ b/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
@@ -2161,8 +2161,8 @@
 <p>NOTE-2: These are class recordings and until we are able to edit them you'll need to fast-forward to the start of the building of the app. Timestamps are on their way.</p>
 </blockquote>
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1tpmZwo2AgdXYY_q_N_0o1zsxZuVugXKo/view?usp=drive_link">Mini Full Stack App Pt. 1</a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1pq-C5mN9QFUkNOgJM9tZyrO_267uLtEN/view?usp=drive_link">Mini Full Stack App Pt. 2</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1tpmZwo2AgdXYY_q_N_0o1zsxZuVugXKo/view?usp=drive_link">Mini Full Stack App Pt. 1 - 01:31:41</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1pq-C5mN9QFUkNOgJM9tZyrO_267uLtEN/view?usp=drive_link">Mini Full Stack App Pt. 2 - 00:54:55</a></li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1bRVaBTqxc6MywIp_EWGkrxLhJp6-6NG9/view?usp=drive_link">Mini Full Stack App Pt. 3 - Sign Up Route</a></li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/15hqPPeVHhtOvVazQDysQos1U-UbWvrfb/view?usp=drive_link">Mini Full Stack App Pt. 4 - Finish Auth &amp; Hosting</a></li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://drive.google.com/file/d/1Kp0cQ67CvrF2ZHdC-7Qir1yqIxJF2XkU/view?usp=drive_link">Mini Full Stack App Pt. 5 - CRA &amp; Fetching</a></li>
