added capstone videos

--- a/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
+++ b/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
@@ -2202,12 +2202,12 @@
 </blockquote>
 <h3 id="mini-full-stack-app-follow-along-videos">Mini Full Stack App Follow-Along Videos</h3>
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1015799689?share=copy">M.S.T.A. Pt. 1 - CRA ToDo App, Sign-in, Cookie</a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1016176662?share=copy">M.S.T.A. Pt. 2 - Create + Host DB, Express Server App, MySQL(2) Connection, Authentication Route</a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="">M.S.T.A. Pt. 3 - </a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="">M.S.T.A. Pt. 4 - </a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="">M.S.T.A. Pt. 5 - </a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="">M.S.T.A. Pt. 6 - </a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1015799689?share=copy">M.F.S.T.A. Pt. 1 - CRA ToDo App, Sign-in, Cookie</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1016176662?share=copy">M.F.S.T.A. Pt. 2 - Create + Host DB, Express Server App, MySQL(2) Connection, Authentication Route</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1016233741?share=copy">M.F.S.T.A. Pt. 3 - Sign-In/Sign-Up Authentication</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1016252287?share=copy">M.F.S.T.A. Pt. 4 - Finish Authentication &amp; Host Express (Back-End) App</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1018426195?share=copy">M.F.S.T.A. Pt. 5 - Building the Front-end App + Connecting it to the Back-End App</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="">M.F.S.T.A. Pt. 6 - </a></li>
 </ul>
 <h3 id="full-length">Full Length</h3>
 <ul class="task-list">
