added 6th video

--- a/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
+++ b/ebook-folder/site/module-4/aGuideToDeployingYourApp/index.html
@@ -2207,7 +2207,8 @@
 <li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1016233741?share=copy">M.F.S.T.A. Pt. 3 - Sign-In/Sign-Up Authentication</a></li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1016252287?share=copy">M.F.S.T.A. Pt. 4 - Finish Authentication &amp; Host Express (Back-End) App</a></li>
 <li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1018426195?share=copy">M.F.S.T.A. Pt. 5 - Building the Front-end App + Connecting it to the Back-End App</a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="">M.F.S.T.A. Pt. 6 - </a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://vimeo.com/1020331992?share=copy">M.F.S.T.A. Pt. 6 - Build Sign-In Component, Connect Front to Back</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="">M.F.S.T.A. Pt. 7 - </a></li>
 </ul>
 <h3 id="full-length">Full Length</h3>
 <ul class="task-list">
